Require a user gesture to use navigator.share.

BUG=635387

Review-Url: https://codereview.chromium.org/2219383002
Cr-Commit-Position: refs/heads/master@{#410556}

Former-commit-id: 69be009de71cb4bcf0e32ec5c4e8a86876458c1a